fixing layout on mobile devices a little bit

--- a/src/features/comments/Comments.css
+++ b/src/features/comments/Comments.css
@@ -2,25 +2,29 @@
     padding: 2rem;
     margin: 2rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     background-color: azure;
     border-radius: 15px;
     max-width: 80%;
+    min-width: 60%;
 }
 
-.comment {
+.body {
     width: 100%;
 }
 
 .info {
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    min-width: 100%;
 }
 
 .info h4 {
     font-size: small;
+    padding: 5px;
 }
 
 .body {
