--- a/src/features/posts/Posts.css
+++ b/src/features/posts/Posts.css
@@ -62,3 +62,22 @@
     margin-left: auto;
     text-justify: center;
 }
+
+@media only screen and (max-width: 500px) {
+    .postCard {
+        padding: auto;
+        flex-direction: column-reverse;
+    }
+
+    .postCard img {
+        padding: 20px;
+        width: 100px;
+        height: auto;
+    }
+    
+    .postCard h3 {
+        /* padding-top: .5rem; */
+        font-size: 1.25rem;
+        max-width: 95%;
+    }
+}
