--- a/src/features/subReddits/SubReddits.css
+++ b/src/features/subReddits/SubReddits.css
@@ -15,13 +15,14 @@
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: cornsilk;
+    min-width: 100vw;
 }
 
 .subreddit {
     border: 1px solid black;
     border-radius: 15px;
     padding: 3px;
-    width: auto;
+    max-width: 90%;
     margin: .5rem;
     background-color: orangered;
 }
@@ -36,4 +37,27 @@ a {
     height: 50px;
     width: auto;
     z-index: inherit;
+}
+
+@media only screen and (max-width: 500px) {
+    .innerSub {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .subreddit {
+        width: fit-content;
+        min-width: 60vw;
+    }
+
+    .subreddit img {
+        height: 25px;
+        width: auto;
+        z-index: inherit;
+    }
+
+    a {
+        font-size: .8rem;
+    }
 }
